...
                        controller: _tabController,
                        outerScrollController: _outerScrollController,
                        nestedScrollKey: _nestedScrollKey,
                        tabs: const [
                          Tab(
                            icon: Icon(AppIcons.bolt),
                            text: 'Config',
                          ),
                          Tab(
                            icon: Icon(AppIcons.logs),
                            text: 'Logs',
                          ),
                        ],
                      ),
                    ),
                  ),
                ),
...
